--- a/secret-recipes/package.json
+++ b/secret-recipes/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "formik": "^1.5.8",
+    "fuse.js": "^3.4.5",
     "less": "^3.10.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
